@@ -1,3 +1,8 @@
+Wed Aug  6 11:53:11 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>
+
+        * orbsvcs/orbsvcs/Event/EC_Dispatching_Task.cpp:
+          Fixed gcc 4.3 warning
+
 Wed Aug  6 11:45:11 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>
 
         * orbsvcs/orbsvcs/HTIOP/HTIOP_Acceptor.cpp:
